plugins 
{
    id 'java-library'
}

java.toolchain.languageVersion = JavaLanguageVersion.of(17)

dependencies
{
    testImplementation platform(group: 'org.junit', name: 'junit-bom', version: '5.7.1')    
    testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter'
    testRuntimeOnly group: 'org.junit.platform', name: 'junit-platform-launcher'
}

compileTestJava.configure {
    options.compilerArgs += [ '--add-modules=jdk.incubator.foreign' ]
}

test.configure {
	jvmArgs += [ '--add-modules=jdk.incubator.foreign', '--enable-native-access=ALL-UNNAMED' ]
    useJUnitPlatform()
}
